# shareql

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml
