[project]
name = "shareql"
version = "1.0.0"
description = "A Python library and CLI for Share Query Language."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "p0dalirius" }
]
dependencies = [
    "lark",
]

[tool.poetry.scripts]
shareql = "shareql.__main__:main"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
